--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "reactivity",
+  "name": "zborjs",
   "version": "0.0.1",
-  "description": "Minimalistic reactivity engine for CSR and SSR",
+  "description": "Minimalistic reactivity engine for CSR and SSR. Heavily inspired by Stimulus, AlpineJS and VanJS.",
   "main": "/src/index.js",
   "type": "module",
   "scripts": {
     "dev": "bunx --bun vite",
-    "build": "bunx --bun vite build && bun ./scripts/minify.js && gzip -c dist/reactivity.es.min.js > dist/reactivity.es.min.gz",
-    "dev:node" : "vite",
-    "build:node": "vite build && node ./scripts/minify.js && gzip -c dist/reactivity.es.min.js > dist/reactivity.es.min.gz",
+    "build": "bunx --bun vite build && bun ./scripts/minify.js && gzip -c dist/zborjs.es.min.js > dist/zborjs.es.min.gz",
+    "dev:node": "vite",
+    "build:node": "vite build && node ./scripts/minify.js && gzip -c dist/zborjs.es.min.js > dist/zborjs.es.min.gz",
     "preview": "vite preview",
     "test": "vitest run"
   },
@@ -18,16 +18,16 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alpalma95/reactivity.git"
+    "url": "git+https://github.com/alpalma95/zborjs.git"
   },
   "exports": {
     ".": {
-      "import": "./dist/reactivity.es.min.js",
-      "require": "./dist/reactivity.umd.js"
+      "import": "./dist/zborjs.es.min.js",
+      "require": "./dist/zborjs.umd.js"
     }
   },
-  "unpkg": "./dist/reactivity.es.min.js",
-  "module": "./dist/reactivity.es.js",
+  "unpkg": "./dist/zborjs.es.min.js",
+  "module": "./dist/zborjs.es.js",
   "keywords": [
     "reactivity"
   ],
@@ -37,5 +37,8 @@
     "terser": "^5.24.0",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
+  },
+  "dependencies": {
+    "apajs-streams": "^1.0.1"
   }
 }
