--- a/package.json
+++ b/package.json
@@ -1,9 +1,33 @@
 {
-  "name": "@reactiv/reactivjs",
-  "version": "0.1.3",
-  "description": "Minimalistic reactivity engine for CSR and SSR. Heavily inspired by Stimulus, AlpineJS and VanJS.",
+  "name": "@reactivjs/reactivjs",
+  "version": "1.0.0",
+  "author": "Álvaro Palma",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alpalma95/reactivjs.git"
+  },
   "main": "/src/index.js",
-  "type": "module",
+  "module": "./dist/reactivjs.es.js",
+  "devDependencies": {
+    "terser": "^5.24.0",
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/reactivjs.es.min.js",
+      "require": "./dist/reactivjs.umd.js"
+    }
+  },
+  "description": "Minimalistic reactivity engine for CSR and SSR. Heavily inspired by Stimulus, AlpineJS and VanJS.",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "keywords": [
+    "reactivity"
+  ],
+  "license": "MIT",
   "scripts": {
     "dev": "bunx --bun vite",
     "build": "bunx --bun vite build && bun ./scripts/minify.js && gzip -c dist/reactivjs.es.min.js > dist/reactivjs.es.min.gz",
@@ -12,33 +36,9 @@
     "preview": "vite preview",
     "test": "vitest run"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alpalma95/reactivjs.git"
-  },
-  "exports": {
-    ".": {
-      "import": "./dist/reactivjs.es.min.js",
-      "require": "./dist/reactivjs.umd.js"
-    }
-  },
+  "type": "module",
   "unpkg": "./dist/reactivjs.es.min.js",
-  "module": "./dist/reactivjs.es.js",
-  "keywords": [
-    "reactivity"
-  ],
-  "author": "Álvaro Palma",
-  "license": "MIT",
-  "devDependencies": {
-    "terser": "^5.24.0",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6"
-  },
   "dependencies": {
-    "apajs-streams": "^1.0.1"
+    "@reactivjs/streams": "^1.0.0"
   }
 }
