--- a/package.json
+++ b/package.json
@@ -8,11 +8,6 @@
   },
   "main": "/src/index.js",
   "module": "./dist/reactivjs.es.js",
-  "devDependencies": {
-    "terser": "^5.24.0",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6"
-  },
   "exports": {
     ".": {
       "import": "./dist/reactivjs.es.min.js",
@@ -34,10 +29,16 @@
     "dev:node": "vite",
     "build:node": "vite build && node ./scripts/minify.js && gzip -c dist/reactivjs.es.min.js > dist/reactivjs.es.min.gz",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest"
   },
   "type": "module",
   "unpkg": "./dist/reactivjs.es.min.js",
+  "devDependencies": {
+    "terser": "^5.24.0",
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6",
+    "jsdom": "^24.0.0"
+  },
   "dependencies": {
     "@reactivjs/streams": "^1.0.0"
   }
